fix proper antigram solution and add 2nd input for words.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,10 @@
 <h1>Fill in a word to find if its an anagram, palindrome, or not: </h1>
 <form action='/result'>
   <div class="form-group">
-    <label for="input">enter a word:</label>
-    <input id="input" name="input" class="form-control" type="text">
+     <label for="anagram">enter first word</label>
+     <input id="anagram" name="anagrams1" class="form-control" type="text">
+     <label for="anagram">enter second word</label>
+     <input id="anagram" name="anagrams2" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn">Go!</button>
+  <button type="submit" class="btn-success">click here</button>
 </form>
